# Agentic_platform

./: .env.example  .gitattributes  .gitignore  .secrets.baseline  .secrets.baseline.tmp  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  DECISIONS.md  Makefile  README.md  REPOSITORY_GUIDE.md  REPOSITORY_RESTRUCTURE_REPORT.md  ROADMAP.md  TASKS.md  VISION.md  alembic.ini  docker-compose.yml  pytest.ini  requirements-dev.txt
.ai/: README.md
.ai/commands/: generate-api.md  generate-events.md  generate-tests.md  health-check.md  implement-story.md  next.md  performance-review.md  refactor-service.md  regression-review.md  release-story.md  review-story.md  security-review.md  update-documentation.md
.ai/skills/: MIGRATION_SUMMARY.md
.github/workflows/: ci.yml
contracts/: README.md  agent-contract.schema.json  common-tool-responses.schema.json  event-envelope.schema.json  memory-schema.schema.json  platform-object.schema.json  task-schema.schema.json  tool-contract.schema.json
contracts/examples/: coding-agent-registration.json  sample-platform-object.json
docs/: MIGRATION_PLAN.md  MIGRATION_REPORT.md
docs/04-program/: README.md
docs/05-blueprints/: README.md
docs/architecture/: ARCHITECTURE_BASELINE_V2.md  ARCHITECTURE_CHANGELOG_V2.md  ARCHITECTURE_V2_CHANGE_SUMMARY.md  IMPLEMENTATION_READINESS.md  METADATA_DRIVEN_ENTERPRISE_PLATFORM.md  PLATFORM_CONTRACTS.md  PLATFORM_GLOSSARY.md  PLATFORM_META_MODEL.md  PLATFORM_PRIMITIVES.md  PLATFORM_UX_MODEL.md  README.md  REFERENCE_ARCHITECTURE.md
docs/artifacts/: README.md  TECHNICAL_ARCHITECTURE.md
docs/engineering/: ARCHITECTURE_ALIGNMENT_REPORT.md  README.md  release-plan.md
docs/migration/: MIGRATION_PLAN.md  MIGRATION_REPORT.md  README.md
docs/product/: COMMERCIAL_MODEL.md  DOMAIN_INTERACTION.md  FUTURE_CAPABILITIES.md  MARKETPLACE.md  PI_TO_DOMAIN_MAPPING.md  PLATFORM_CORE.md  PRODUCT_DOMAINS.md  PRODUCT_MAP.md  README.md  ROADMAP.md  SOLUTION_PACKS.md  STUDIO_OVERVIEW.md  VISION.md
migrations/: env.py  helpers.py  script.py.mako
scripts/: generate_docker_compose.py  generate_prometheus_config.py  prepend_repository_discovery.py  provision_kafka_topics.py  run_migrations.py  run_tests.py  scaffold_pi01_services.py  sync_ai_skills.ps1  upgrade_implement_story_v6.py  validate_contract.py  verify_dev_environment.py  verify_kafka_topology.py  wait_for_health.py
src/platform/registry/model-router/: .env.example  Dockerfile  pyproject.toml
src/platform/registry/model-router/src/model_router/: config.py  main.py
src/platform/registry/model-router/tests/: test_health.py
src/platform/registry/tool-registry/: .env.example  Dockerfile  pyproject.toml
src/platform/registry/tool-registry/src/tool_registry/: config.py  main.py
src/platform/registry/tool-registry/tests/: test_health.py
src/platform/services/metadata-engine/: Dockerfile  pyproject.toml
src/platform/services/metadata-engine/src/metadata_engine/: config.py  dependencies.py  main.py
src/platform/services/metadata-engine/src/metadata_engine/api/: platform_objects.py
src/shared/aep_common/: pyproject.toml
src/shared/aep_common/aep_common/: __init__.py  app.py  db.py  dependencies.py  health.py  logging.py  metrics.py  tracing.py
src/shared/aep_common/aep_common/kafka/: __init__.py  bootstrap.py  consumer.py  contracts.py  dlq.py  envelope.py  exceptions.py  producer.py  topic_catalog.py  tracing.py
src/shared/aep_common/tests/: test_app.py  test_health.py  test_kafka_consumer.py  test_kafka_dlq.py  test_kafka_envelope.py  test_kafka_producer.py  test_logging.py  test_tracing.py
src/shared/aep_meta/: pyproject.toml
src/shared/aep_meta/aep_meta/: __init__.py  exceptions.py  factory.py
src/shared/aep_meta/aep_meta/application/: __init__.py  platform_object_service.py  validation.py
src/shared/aep_meta/aep_meta/domain/: __init__.py  enums.py  lifecycle.py  models.py  ports.py
src/shared/aep_meta/aep_meta/infrastructure/: in_memory_repository.py  observability.py  postgres_repository.py  schema_validator.py
src/shared/aep_meta/tests/: test_platform_object_framework.py  test_postgres_repository.py
workflows/: greenfield-v1.0.0.json
(+485 files in other folders)
