[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aep-meta"
version = "0.1.0"
description = "Metadata Engine — Platform Object framework for Agentic Engineering Platform"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6.0",
    "jsonschema>=4.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["aep_meta"]
