[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-router"
version = "0.1.0"
description = "Agentic Engineering Platform — model-router"
requires-python = ">=3.12"
dependencies = [
    "aep-common[health]",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["model_router"]
